// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keepAlive settings should throw if < -1 keepAliveInterval connectionString 1`] = `"Invalid keepAliveInterval \\"-2\\". Please provide a positive integer, or -1 to disable."`;

exports[`keepAlive settings should throw if < -1 keepAliveInterval constructor 1`] = `"Invalid keepAliveInterval \\"-2\\". Please provide a positive integer, or -1 to disable."`;

exports[`keepAlive settings should throw if < -1 keepAliveTimeout connectionString 1`] = `"Invalid keepAliveTimeout \\"-100\\". Please provide a positive integer, or -1 to disable."`;

exports[`keepAlive settings should throw if < -1 keepAliveTimeout constructor 1`] = `"Invalid keepAliveTimeout \\"-100\\". Please provide a positive integer, or -1 to disable."`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 1`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 0 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 2`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 1 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 3`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 10 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 4`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 1000 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 5`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 9999 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) constructor 1`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 0 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) constructor 2`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 1 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) constructor 3`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 10 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) constructor 4`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 1000 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) constructor 5`] = `
Array [
  Array [
    "Specified KeepAliveInterval of 9999 is less than recommended 10_000 ms.",
  ],
]
`;
